Revert "MGNLUI-1668 Fixed the overflow problem by hiding overflow on iframe rather then on page-editor."
This reverts commit 951f31a630cd669fc65b5f9a171a0da8350dda41.

--- a/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-app-pages/ui-app-pages.scss
+++ b/magnolia-ui-admincentral/src/main/resources/VAADIN/themes/ui-app-pages/ui-app-pages.scss
@@ -23,19 +23,12 @@
       padding-bottom: 40px;
       overflow: visible;
     }
-
-    .pageEditor > iframe {
-      overflow: hidden;
-    }
-
-    .pageEditor {
-      overflow: auto;
-      width: 100%;
-      height: 100%;
-    }
   }
 
   .tablet .pageEditor {
+    width: 100%;
+    height: 100%;
     -webkit-overflow-scrolling: touch;
+    overflow: auto;
   }
 }
